# collab_robotics

./: README.md
apriltag_ros/cfg/: tags_36h11.yaml
apriltag_ros/src/: AprilTagNode.cpp
install/: local_setup.sh  setup.bash  setup.sh
install/la_msgs/include/la_msgs/action/: move_base.h  move_base.hpp
install/la_msgs/include/la_msgs/action/detail/: move_base__builder.hpp  move_base__functions.c  move_base__rosidl_typesupport_fastrtps_c.h  move_base__rosidl_typesupport_fastrtps_cpp.hpp  move_base__rosidl_typesupport_introspection_c.h  move_base__traits.hpp  move_base__type_support.c  move_base__type_support.cpp  move_base__type_support.h
install/la_msgs/include/la_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/la_msgs/include/la_msgs/srv/: ptps.hpp
install/la_msgs/include/la_msgs/srv/detail/: ptps__builder.hpp  ptps__rosidl_typesupport_fastrtps_c.h  ptps__rosidl_typesupport_fastrtps_cpp.hpp  ptps__rosidl_typesupport_introspection_c.h  ptps__rosidl_typesupport_introspection_cpp.hpp  ptps__type_support.h
install/la_msgs/share/ament_index/resource_index/package_run_dependencies/: la_msgs
install/la_msgs/share/ament_index/resource_index/parent_prefix_path/: la_msgs
install/la_msgs/share/ament_index/resource_index/rosidl_interfaces/: la_msgs
install/la_msgs/share/la_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/la_msgs/share/la_msgs/action/: MoveBase.idl
install/la_msgs/share/la_msgs/cmake/: la_msgsConfig.cmake  la_msgs__rosidl_generator_cExport-noconfig.cmake  la_msgs__rosidl_typesupport_cppExport.cmake  la_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  la_msgs__rosidl_typesupport_introspection_cExport.cmake
install/la_msgs/share/la_msgs/srv/: Ptps.idl  Ptps_Request.msg
install/locobot_autonomy/include/locobot_autonomy/action/: move_base.hpp
install/locobot_autonomy/include/locobot_autonomy/action/detail/: move_base__functions.c  move_base__functions.h  move_base__rosidl_typesupport_fastrtps_c.h  move_base__rosidl_typesupport_fastrtps_cpp.hpp  move_base__rosidl_typesupport_introspection_c.h  move_base__rosidl_typesupport_introspection_cpp.hpp  move_base__type_support.c
install/locobot_autonomy/include/locobot_autonomy/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/locobot_autonomy/share/ament_index/resource_index/parent_prefix_path/: locobot_autonomy
install/locobot_autonomy/share/locobot_autonomy/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/locobot_autonomy/share/locobot_autonomy/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  locobot_autonomyConfig.cmake  locobot_autonomy__rosidl_generator_cExport.cmake  locobot_autonomy__rosidl_generator_cppExport.cmake  locobot_autonomy__rosidl_typesupport_cExport-noconfig.cmake  locobot_autonomy__rosidl_typesupport_cppExport.cmake  locobot_autonomy__rosidl_typesupport_introspection_cppExport-noconfig.cmake  locobot_autonomy__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/me326_project/include/me326_project/action/: move_base.h  move_base.hpp
install/me326_project/include/me326_project/action/detail/: move_base__builder.hpp  move_base__functions.c  move_base__functions.h  move_base__rosidl_typesupport_fastrtps_c.h  move_base__rosidl_typesupport_introspection_c.h  move_base__struct.hpp  move_base__traits.hpp
install/me326_project/include/me326_project/msg/: rosidl_typesupport_introspection_c__visibility_control.h
install/me326_project/lib/me326_project/: vision_client.py
install/me326_project/share/ament_index/resource_index/parent_prefix_path/: me326_project
install/me326_project/share/me326_project/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/me326_project/share/me326_project/cmake/: ament_cmake_export_targets-extras.cmake  me326_project__rosidl_typesupport_introspection_cExport.cmake  me326_project__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/me326_project/share/me326_project/launch/: locobot_circle_traj.launch.py  locobot_moveitpy.launch.py  spawn_cube.launch.py
locobot_interfaces/: CMakeLists.txt  package.xml
locobot_interfaces/action/: MoveGripper.action  SpinBase.action  TiltCamera.action
locobot_interfaces/install/: local_setup.sh  setup.sh  setup.zsh
locobot_interfaces/log/: latest_build
locobot_interfaces/srv/: BlockColor.srv  GetBasePose.srv  MoveGripper.srv  SetPose.srv
log/: latest_build
me326_locobot_example/: CMakeLists.txt
me326_locobot_example/launch/: locobot_circle_traj.launch.py  locobot_gazebo_example.launch.py  locobot_moveitpy.launch.py  spawn_cube.launch.py
me326_locobot_example/scripts/: locobot_moveitpy.py
me326_project/: CMakeLists.txt  package.xml
me326_project/launch/: example.launch.xml  locobot_sim_full.launch.py  navigation_test.launch.py  read_tag.launch.py  spawn_april_tag.launch.py  spawn_april_tags.launch.py  spawn_cube_prof.launch.py
me326_project/me326_project/: move_base_client.py  record_rosbag.py  vision_client.py
me326_project/model/: red_cube.urdf
me326_project/scripts/: RRTstar.py  apriltag_global_frame.py  block_attach_detach.py  camera_frame_broadcaster.py  circle_motion_tracking.py  get_base_pose.py  go_to_point.py  initial_point.py  locobot_state_machine.py  move_base_client.py  move_gripper_action_server.py  move_locobot_base_action_server.py  spin_base_action_server.py  tilt_camera_action_server.py  vision_action_server.py  vision_client.py
me326_project/src/: move_arm_action_server.cpp
me326_project/src/install/: local_setup.sh  setup.ps1  setup.sh
me326_project/src/log/: latest_build
